# ai_machine_learning

./: CMakeLists.txt  NNtest.cpp  README.md  StoppingCriteria.cpp  quickstartTutorial.cpp
Final/: CMakeLists.txt  README.md  SupervisedMethod.cpp  SupervisedMethod.h  main.cpp
Final/Shark/: CTestTestfile.cmake  Makefile
Final/Shark/Test/: cmake_install.cmake
Final/Shark/doc/: CMakeCache.txt  Shark.dox  cmake_install.cmake
Final/Shark/doc/tutToRst/: cmake_install.cmake
Final/Shark/examples/: Makefile  cmake_install.cmake
Final/Shark/include/shark/Core/: Shark.h
Final/Shark/src/: Makefile
OpenNN/blank/: blank.pro
OpenNN/tests/: bounding_layer_test.cpp  bounding_layer_test.h  conditions_layer_test.cpp  conditions_layer_test.h  conjugate_gradient_test.cpp  conjugate_gradient_test.h  cross_entropy_error_test.cpp  cross_entropy_error_test.h  data_set_test.cpp  data_set_test.h  evolutionary_algorithm_test.cpp  evolutionary_algorithm_test.h  final_solutions_error_test.cpp  final_solutions_error_test.h  gradient_descent_test.cpp  gradient_descent_test.h  independent_parameters_error_test.cpp  independent_parameters_error_test.h  independent_parameters_test.cpp  independent_parameters_test.h  inputs_test.cpp  (+83 more)
Shark/: CMakeLists.txt  FFNN.cpp  Hypothesis.h  Hypothesis.tpp  MLMethod.cpp  NNtest.cpp  StoppingCriteria.cpp  SupervisedMethod.cpp  SupervisedMethod.h  main.cpp
Shark/Shark/doc/: Makefile
Shark/Shark/doc/sphinx_pages/: conf.py
Shark/Shark/doc/tutToRst/: Makefile  tut2rst
tensorflow/: Test_Data.csv  TraData.csv  machine_learning.py  下載教學.txt  使用方法.txt
(+18 files in other folders)
